fixed bug on mobile home buttons

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -58,8 +58,8 @@
 
 .overlayPrint {
     position: absolute;
-    left: 50%;
-    top: 50%;
+    left: 50px;
+    top: 50px;
     background-image: url(../images/icons/print_icon.jpg);
     background-size: 100%;
     overflow: hidden;
@@ -72,8 +72,8 @@
 }
 .overlayDigital {
     position: absolute;
-    left: 50%;
-    top: 50%;
+    left: 50px;
+    top: 50px;
     background-image: url(../images/icons/digital_icon.jpg);
     background-size: 100%;
     overflow: hidden;
@@ -86,8 +86,8 @@
 }
 .overlayRetouch {
     position: absolute;
-    left: 50%;
-    top: 50%;
+    left: 50px;
+    top: 50px;
     background-image: url(../images/icons/retouch_icon.jpg);
     background-size: 100%;
     overflow: hidden;
@@ -151,9 +151,9 @@
     }
     .image_container {
         position: relative;
-        width: 75px;
-        height: 75px;
-        margin: 0px 10px 0;
+        width: 76px;
+        height: 76px;
+        margin: 20px 10px;
     }
     .border-home {
         display: flex;
@@ -164,9 +164,18 @@
         margin: 30px 0 20px;
         padding: 30px 30px 10px;
     }
-    .overlay {
-        transition: none;
-        overflow: none;
-        width: 100%;
+    .overlayPrint,
+    .overlayDigital,
+    .overlayRetouch {
+        top: 38px;
+        left: 38px;
+    }
+
+    .image_container:hover .overlayPrint,
+    .image_container:hover .overlayDigital,
+    .image_container:hover .overlayRetouch {
+        transform: translateX(-38px) translateY(-38px);
+        -webkit-transform: translateX(-38px) translateY(-38px);
+        -ms-transform:  translateX(-38px) translateY(-38px);
     }
 }
